--- a/.github/workflows/changed.yml
+++ b/.github/workflows/changed.yml
@@ -18,13 +18,21 @@ jobs:
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v44
+        with:
+          files_yaml: |
+            app1-prod:
+              - app1-prod/**
+            app2-dev:
+              - app2-dev/**
+            app3-uat:
+              - app3-uat/**
         # To compare changes between the current commit and the last pushed remote commit set `since_last_remote_commit: true`. e.g
         # with:
         #   since_last_remote_commit: true
 
       - name: List all changed files
         env:
-          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.changed_keys }}
         run: |
           for file in ${ALL_CHANGED_FILES}; do
             echo "$file was changed"
