--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -39,7 +39,7 @@ jobs:
     name: Run Matrix Job
     runs-on: ubuntu-latest
     needs: [changed-files]
-    if: ${{ needs.changes-files.outputs.apps != '[]' && needs.changes-files.outputs.apps != '' }}
+    if: ${{ needs.changed-files.outputs.apps != '[]' && needs.changed-files.outputs.apps != '' }}
     strategy:
       matrix:
         files: ${{ fromJSON(needs.changed-files.outputs.apps) }}
