--- a/.github/workflows/pushed.yml
+++ b/.github/workflows/pushed.yml
@@ -1,12 +1,56 @@
-name: when-pushed
+name: CI-pushed
+
 on:
   push:
     branches:
       - main
+
 jobs:
-  display:
-    runs-on:  ubuntu-latest
-    name: Display a message
+  # -------------------------------------------------------------
+  # Using GitHub's API is not supported for push events
+  # -------------------------------------------------------------
+  #
+  # ----------------------------------------------------------------------------------------------
+  # Using local .git history
+  # ----------------------------------------------------------------------------------------------
+  # Event `push`: Compare the preceding remote commit -> to the current commit of the main branch
+  # ----------------------------------------------------------------------------------------------
+  changed_files:
+    runs-on: ubuntu-latest  # windows-latest || macos-latest
+    name: Test changed-files
     steps:
-      - name: display
-        run: echo 'hello'
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v44
+        with:
+          matrix: true
+          files_yaml: |
+            app1-prod:
+              - app1-prod/**
+            app2-dev:
+              - app2-dev/**
+            app3-uat:
+              - app3-uat/**
+      - name: List all changed files
+        run: echo '${{ steps.changed-files.outputs.changed_keys }}'
+
+  matrix-job:
+    name: Run Matrix Job
+    runs-on: ubuntu-latest
+    needs: [changed-files]
+    if: ${{ needs.changed-files.outputs.apps != '[]' && needs.changed-files.outputs.apps != '' }}
+    strategy:
+      matrix:
+        files: ${{ fromJSON(needs.changed-files.outputs.apps) }}
+      max-parallel: 4
+      fail-fast: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Test
+        run: |
+          echo ${{ matrix.files }}
