--- a/.github/workflows/pushed.yml
+++ b/.github/workflows/pushed.yml
@@ -15,7 +15,7 @@ jobs:
   # ----------------------------------------------------------------------------------------------
   # Event `push`: Compare the preceding remote commit -> to the current commit of the main branch
   # ----------------------------------------------------------------------------------------------
-  changed_files:
+  changed-files:
     runs-on: ubuntu-latest  # windows-latest || macos-latest
     name: Test changed-files
     steps:
