--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -48,6 +48,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Dump GitHub context
+        run: echo "${{toJSON(github)}}"
       - name: Test
         run: |
           echo ${{ matrix.files }}
+        working-directory: "${{github.workspace}}/${{matrix.files}}"
+
